# han_snap

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt  README.md
backend/db/: 01_down.sql  02_up.sql  README.md
backend/include/: database.h  llm.h  model.h
backend/src/: database.cpp  llm.cpp  main.cpp  model.cpp
backend/tests/: CMakeLists.txt  database_tests.cpp  test_utils.h
common/include/: logger.h
examples/: hello_world.cpp
include/: base64.h  clipboard_processor.h  filemonitor.h  hotkey.h  http_client.h  main_frame.h  model.h  ocr.h  screenshot.h  taskbar.h
src/: clipboard_processor.cpp  filemonitor.cpp  hotkey.cpp  http_client.cpp  llm.cpp  main.cpp  main_frame.cpp  ocr.cpp  screenshot.cpp  taskbar.cpp
